test/corpus/instruction_nasm.txt
==============================================================================
simple NASM macro
==============================================================================

%macro  prologue 0

        push    ebp
        mov     ebp,esp

%endmacro

-----------------------------------------------------------------------------

(program)
  (nasm_preprocess_directive
    (identifier)
    (integer))
  (instruction
    (mnemonic)
    (register))
  (instruction
    (mnemonic)
    (register)
    (register))
  (nasm_macro))


==============================================================================
width + constant
==============================================================================

push    dword 1 ; MB_OKCANCEL

-----------------------------------------------------------------------------

(program
  (instruction
    (mnemonic)
    (width)
    (integer))
  (comment))


==============================================================================
NASM arithmetic pointer
==============================================================================

fstp	dword [sp(%$c1)]
fstp	dword [sp(%$t)]
fstp	dword [sp(%$t_c)]
mov	dword [sp(%$k)], 2	;k = 2

-----------------------------------------------------------------------------

(program)


==============================================================================
NASM common header
==============================================================================

default rel
[bits 64]

%include "reg_sizes.asm"

-----------------------------------------------------------------------------

(program
  (instruction
    (mnemonic)
    (identifier))
  (nasm_assembler_directive
    (mnemonic)
    (integer))
  (nasm_preprocess_directive
    (string)))


==============================================================================
NASM macros with commas
==============================================================================

%ifdef __NASM_VER__
%ifidn __OUTPUT_FORMAT__, win64
%error nasm not supported in windows
%else
%define endproc_frame
%endif
%endif

------------------------------------------------------------------------------

(program
  (nasm_preprocess_directive
    (macro))
  (nasm_preprocess_directive
    (macro)
    (identifier))
  (nasm_preprocess_directive
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier))
  (nasm_preprocess_directive)
  (nasm_preprocess_directive
    (identifier))
  (nasm_preprocess_directive)
  (nasm_preprocess_directive))
